[package]
name = "solana-clusters-initiator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_clusters_initiator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-helper = "0.1.0"
oapp = { path = "../../packages/LayerZero-v2/packages/layerzero-v2/solana/programs/libs/oapp" }